# Iris

./: .gitignore  LICENSE  README.md  cmake_run.sh
src/: CMakeLists.txt  Iris.cpp  Iris.hpp  main.cpp
